# unchecked-malloc-plugin

./: .gitignore  ANALYSIS.md  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  MallocChecker.cpp  README.md  build.sh  demo.sh  project.md  run.sh  run_tests.sh  test.c  test2.c
src/: MallocChecker.cpp
testcases/: tn1_null_check.c  tn2_shorthand_check.c  tp1_basic_deref.c  tp2_array_access.c  tp3_struct_member.c  tp4_pointer_return_fixit.c
tests/: tn1_null_check.c  tn2_shorthand_check.c  tp1_basic_deref.c  tp2_array_access.c  tp3_struct_member.c
web/: app.js  index.html  server.py  style.css  test_ast_parser.py
